examples/test/testpolicy10057.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10057
  namespace: namespace339
spec:
  podSelector:
    matchLabels:
      key37: value47
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key12: value6
          key16: value14
          key28: value30
      podSelector:
        matchLabels:
          key34: value41
          key32: value27
          key17: value37
